Progress on responsive design - Add phone size for LG CTA - Complete responsiveness on About page - Correct bottom margin on grid-feed - Correct gap for grid on phone

--- a/src/front/components/CTA/_index.scss
+++ b/src/front/components/CTA/_index.scss
@@ -31,3 +31,13 @@
     width: 17.3px;
   }
 }
+
+@media (max-width: size.$size-470) {
+  .cta-lg {
+    font-size: size.$size-24;
+
+    > svg {
+      width: 23.22px;
+    }
+  }
+}
