--- a/src/front/pages/About/_index.scss
+++ b/src/front/pages/About/_index.scss
@@ -4,6 +4,7 @@
 
 .grid-about {
   grid-template-rows: repeat(12, size.$size-157);
+  margin-bottom: size.$size-27;
   margin-top: size.$size-184;
 
   .cover {
@@ -88,7 +89,7 @@
 
 @media (max-width: size.$size-760) {
   .grid-about {
-    grid-template-rows: repeat(14, size.$size-157) auto;
+    grid-template-rows: repeat(13, size.$size-157) auto;
 
     .cover {
       grid-row: 1/4;
@@ -96,6 +97,41 @@
 
     .content {
       grid-row-start: 4;
+    }
+  }
+}
+
+@media (max-width: size.$size-470) {
+  .grid-about {
+    grid-template-rows: repeat(12, size.$size-176) auto;
+    margin-bottom: size.$size-24;
+
+    .cover {
+      grid-column: 1/-1;
+
+      .header-lg {
+        margin-bottom: size.$size-24;
+      }
+    }
+
+    .content {
+      grid-column: 1/-1;
+      grid-row-start: 3;
+    }
+
+    .closing {
+      grid-column: 1/-1;
+      grid-row: 11/12;
+    }
+
+    .subgrid-resume {
+      grid-column: 1/-1;
+      grid-row: 13/14;
+
+      > .subgrid-skills {
+        column-gap: 24px;
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
 }
