--- a/src/front/visuals/_Feed.scss
+++ b/src/front/visuals/_Feed.scss
@@ -67,6 +67,8 @@
 
 @media (max-width: size.$size-470) {
   .grid-feed {
+    margin-bottom: size.$size-24;
+
     > header {
       .header-lg {
         margin-bottom: size.$size-32;
