--- a/src/front/visuals/_grid.scss
+++ b/src/front/visuals/_grid.scss
@@ -12,7 +12,7 @@
 
 @media (max-width: size.$size-470) {
   .grid {
-    grid-gap: size.$size-18;
+    grid-gap: size.$size-24;
     grid-template-columns: 1fr;
   }
 }
